function for date and time added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="header-date-wrapper">
             <p class="date-tag"></p>
+            <p class="time-tag"></p>
         </div>
     </header>
     
