added breaking bad api

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
             <p class="time-tag"></p>
         </div>
     </header>
+
+    <main>
+        <div class="btn-container">
+            <button>Create random Breaking Bad Quote</button>
+        </div>
+
+        <div class="text-container">
+            <div class="author-wrapper">
+                <p class="author">Author:</p>
+                <p class="person"></p>
+            </div>
+            <div class="quote-wrapper">
+                <p class="quote-titel">Quote:</p>
+                <p class="quote"></p>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
